@@ -1,9 +1,8 @@
 package at.aau.serg.websocketdemoserver.game;
 
-import at.aau.serg.websocketdemoserver.game.GameException;
 import at.aau.serg.websocketdemoserver.messaging.dtos.ClientCommand;
 import at.aau.serg.websocketdemoserver.messaging.dtos.CommandType;
-import at.aau.serg.websocketdemoserver.messaging.dtos.ErrorCode;
+import at.aau.serg.websocketdemoserver.messaging.dtos.GameMode;
 import at.aau.serg.websocketdemoserver.messaging.dtos.GamePhase;
 import at.aau.serg.websocketdemoserver.messaging.dtos.GameRoomState;
 import at.aau.serg.websocketdemoserver.game.models.City;
@@ -24,7 +23,7 @@ class GameCommandServiceUnitTest {
     @Test
     void rollDiceSetsDiceValueAndIncrementsVersion() {
         GameCommandService service = new GameCommandService(new FixedRandom(4));
-        GameRoomState state = inTurnState("player-1", players("player-1", "player-2"));
+        GameRoomState state = inTurnState(defaultPlayers());
 
         service.processCommand(state, new ClientCommand(CommandType.ROLL_DICE, "lobby-1", "player-1", null, null));
 
@@ -35,7 +34,7 @@ class GameCommandServiceUnitTest {
     @Test
     void rollDiceRejectsNonActivePlayer() {
         GameCommandService service = new GameCommandService(new FixedRandom(1));
-        GameRoomState state = inTurnState("player-1", players("player-1", "player-2"));
+        GameRoomState state = inTurnState(defaultPlayers());
 
         assertThatThrownBy(() -> service.processCommand(
                 state,
@@ -47,7 +46,7 @@ class GameCommandServiceUnitTest {
     @Test
     void moveTokenRejectsWhenDiceWasNotRolled() {
         GameCommandService service = new GameCommandService(new FixedRandom(1));
-        GameRoomState state = inTurnState("player-1", players("player-1", "player-2"));
+        GameRoomState state = inTurnState(defaultPlayers());
 
         assertThatThrownBy(() -> service.processCommand(
                 state,
@@ -59,7 +58,7 @@ class GameCommandServiceUnitTest {
     @Test
     void moveTokenRejectsWhenStepsDoNotMatchDiceValue() {
         GameCommandService service = new GameCommandService(new FixedRandom(3));
-        GameRoomState state = inTurnState("player-1", players("player-1", "player-2"));
+        GameRoomState state = inTurnState(defaultPlayers());
         service.processCommand(state, new ClientCommand(CommandType.ROLL_DICE, "lobby-1", "player-1", null, null));
 
         assertThatThrownBy(() -> service.processCommand(
@@ -72,13 +71,13 @@ class GameCommandServiceUnitTest {
     @Test
     void moveTokenAdvancesPositionRotatesTurnAndClearsDice() {
         GameCommandService service = new GameCommandService(new FixedRandom(2));
-        List<PlayerState> players = players("player-1", "player-2");
-        GameRoomState state = inTurnState("player-1", players);
+        List<PlayerState> players = defaultPlayers();
+        GameRoomState state = inTurnState(players);
         service.processCommand(state, new ClientCommand(CommandType.ROLL_DICE, "lobby-1", "player-1", null, null));
 
         service.processCommand(state, new ClientCommand(CommandType.MOVE_TOKEN, "lobby-1", "player-1", 3, null));
 
-        assertThat(players.get(0).getBoardPosition()).isEqualTo(3);
+        assertThat(players.getFirst().getBoardPosition()).isEqualTo(3);
         assertThat(state.getCurrentPlayerId()).isEqualTo("player-2");
         assertThat(state.getLastDiceValue()).isNull();
         assertThat(state.getVersion()).isEqualTo(2L);
@@ -87,7 +86,7 @@ class GameCommandServiceUnitTest {
     @Test
     void moveTokenRejectsNonActivePlayer() {
         GameCommandService service = new GameCommandService(new FixedRandom(1));
-        GameRoomState state = inTurnState("player-1", players("player-1", "player-2"));
+        GameRoomState state = inTurnState(defaultPlayers());
         service.processCommand(state, new ClientCommand(CommandType.ROLL_DICE, "lobby-1", "player-1", null, null));
 
         assertThatThrownBy(() -> service.processCommand(
@@ -100,7 +99,7 @@ class GameCommandServiceUnitTest {
     @Test
     void rollDiceRejectsWhenDiceAlreadyRolled() {
         GameCommandService service = new GameCommandService(new FixedRandom(3));
-        GameRoomState state = inTurnState("player-1", players("player-1", "player-2"));
+        GameRoomState state = inTurnState(defaultPlayers());
         service.processCommand(state, new ClientCommand(CommandType.ROLL_DICE, "lobby-1", "player-1", null, null));
 
         assertThatThrownBy(() -> service.processCommand(
@@ -134,7 +133,7 @@ class GameCommandServiceUnitTest {
         GameCommandService service = new GameCommandService(new FixedRandom(1));
         GameRoomState state = new GameRoomState();
         state.setPhase(GamePhase.LOBBY);
-        state.setPlayers(players("player-1", "player-2"));
+        state.setPlayers(defaultPlayers());
         state.setCurrentPlayerId("player-1");
 
         assertThatThrownBy(() -> service.processCommand(
@@ -147,7 +146,7 @@ class GameCommandServiceUnitTest {
     @Test
     void moveTokenRejectsWhenMoveStepsNull() {
         GameCommandService service = new GameCommandService(new FixedRandom(3));
-        GameRoomState state = inTurnState("player-1", players("player-1", "player-2"));
+        GameRoomState state = inTurnState(defaultPlayers());
         service.processCommand(state, new ClientCommand(CommandType.ROLL_DICE, "lobby-1", "player-1", null, null));
 
         assertThatThrownBy(() -> service.processCommand(
@@ -157,22 +156,105 @@ class GameCommandServiceUnitTest {
                 .hasMessageContaining("Move steps are required");
     }
 
-    private GameRoomState inTurnState(String currentPlayerId, List<PlayerState> players) {
+    @Test
+    void hostCanUpdateGameModeInLobbyPhase() {
+        GameCommandService service = new GameCommandService(new FixedRandom(1));
+
+        GameRoomState state = new GameRoomState();
+        state.setLobbyId("lobby-1");
+        state.setHostId("host-1");
+        state.setPhase(GamePhase.LOBBY);
+        state.setGameMode(GameMode.CITY_HOPPER);
+        state.setVersion(0L);
+
+        ClientCommand command = new ClientCommand(CommandType.UPDATE_GAME_MODE, "lobby-1", "host-1", null, null);
+        command.setGameMode(GameMode.GRAND_TOUR);
+
+        service.processCommand(state, command);
+
+        assertThat(state.getGameMode()).isEqualTo(GameMode.GRAND_TOUR);
+        assertThat(state.getGameMode().getStops()).isEqualTo(9);
+        assertThat(state.getVersion()).isEqualTo(1L);
+    }
+
+    @Test
+    void nonHostCannotUpdateGameMode() {
+        GameCommandService service = new GameCommandService(new FixedRandom(1));
+
+        GameRoomState state = new GameRoomState();
+        state.setLobbyId("lobby-1");
+        state.setHostId("host-1");
+        state.setPhase(GamePhase.LOBBY);
+        state.setGameMode(GameMode.CITY_HOPPER);
+        state.setVersion(0L);
+
+        ClientCommand command = new ClientCommand(CommandType.UPDATE_GAME_MODE, "lobby-1", "player-2", null, null);
+        command.setGameMode(GameMode.EPIC_VOYAGE);
+
+        assertThatThrownBy(() -> service.processCommand(state, command))
+                .isInstanceOf(GameException.class)
+                .hasMessageContaining("Only the host can change the game mode");
+
+        assertThat(state.getGameMode()).isEqualTo(GameMode.CITY_HOPPER);
+        assertThat(state.getVersion()).isEqualTo(0L);
+    }
+
+
+    @Test
+    void previousCityIdClearedAfterAutoTurnSwitch_allowsReturnInNextTurn() {
+        // Single-player game so the auto-switch immediately returns to player-1.
+        // novosibirsk –train(1)– omsk: rolling 1 uses up all steps and triggers auto-switch.
+        GameCommandService service = new GameCommandService(new FixedRandom(0)); // dice always = 1
+        PlayerState p1 = new PlayerState("player-1");
+        p1.setCurrentCity(new City("novosibirsk", "Novosibirsk", Continent.ASIA, CityColor.ORANGE));
+        GameRoomState state = new GameRoomState();
+        state.setLobbyId("lobby-1");
+        state.setPlayers(new ArrayList<>(List.of(p1)));
+        state.setPhase(GamePhase.IN_TURN);
+        state.setCurrentPlayerId("player-1");
+
+        // Turn 1: roll 1, move novosibirsk → omsk (cost=1, steps hit 0 → auto-switch)
+        service.processCommand(state, new ClientCommand(CommandType.ROLL_DICE, "lobby-1", "player-1", null, null));
+        ClientCommand moveCmd = new ClientCommand(CommandType.MOVE_TO_CITY, "lobby-1", "player-1", null, null, "omsk", null);
+        service.processCommand(state, moveCmd);
+
+        // Auto-switch returns to player-1 (only player). previousCityId must be null now.
+        assertThat(p1.getPreviousCityId()).isNull();
+
+        // Turn 2: roll again — novosibirsk must appear in validMoveIds (no U-turn block)
+        service.processCommand(state, new ClientCommand(CommandType.ROLL_DICE, "lobby-1", "player-1", null, null));
+        assertThat(state.getValidMoveIds()).contains("novosibirsk");
+    }
+
+    @Test
+    void endTurnClearsValidMoveIds() {
+        GameCommandService service = new GameCommandService(new FixedRandom(2));
+        GameRoomState state = inTurnState(defaultPlayers());
+        state.setLastDiceValue(3);
+        state.getPlayers().getFirst().setRemainingSteps(3);
+        state.setValidMoveIds(new ArrayList<>(List.of("some-city-id")));
+
+        service.processCommand(state, new ClientCommand(CommandType.END_TURN, "lobby-1", "player-1", null, null));
+
+        assertThat(state.getValidMoveIds()).isEmpty();
+    }
+
+    private GameRoomState inTurnState(List<PlayerState> players) {
         GameRoomState state = new GameRoomState();
         state.setLobbyId("lobby-1");
         state.setPlayers(players);
         state.setPhase(GamePhase.IN_TURN);
-        state.setCurrentPlayerId(currentPlayerId);
+        state.setCurrentPlayerId("player-1");
         return state;
     }
 
-    private List<PlayerState> players(String firstPlayerId, String secondPlayerId) {
+    private List<PlayerState> defaultPlayers() {
         List<PlayerState> players = new ArrayList<>();
-        PlayerState p1 = new PlayerState(firstPlayerId);
-        p1.setCurrentCity(new City("vienna", "Vienna", Continent.EUROPE, CityColor.RED));
+        PlayerState p1 = new PlayerState("player-1");
+        p1.setCurrentCity(new City("vienna", "Vienna", Continent.EUROPE_AFRICA, CityColor.RED));
         players.add(p1);
-        PlayerState p2 = new PlayerState(secondPlayerId);
-        p2.setCurrentCity(new City("paris", "Paris", Continent.EUROPE, CityColor.BLUE));
+        PlayerState p2 = new PlayerState("player-2");
+        p2.setCurrentCity(new City("paris", "Paris", Continent.EUROPE_AFRICA, CityColor.GREEN));
         players.add(p2);
         return players;
     }
